fix text alignment on exec bios

--- a/pattern-lab/source/_patterns/03-components/exec-bio/_exec-bio.scss
+++ b/pattern-lab/source/_patterns/03-components/exec-bio/_exec-bio.scss
@@ -23,6 +23,9 @@
     .exec-bio__avatar {
       padding:: 0 $spacing--m $spacing--m 0;
     }
+    .exec-bio__name, .exec-bio__twitter {
+      text-align: right;
+    }
   }
   &__text {
   }
@@ -38,8 +41,12 @@
     }
   }
 
-  @include breakpoint($bp--medium) {
-
+  @include breakpoint($bp--small) {
+    &--odd {
+      .exec-bio__name, .exec-bio__twitter {
+        text-align: left;
+      }
+    }
   }
 
   @include breakpoint($bp--large) {
